# neo-unicode

./: .gitignore  CMakeLists.txt  example.cpp  nonius.cmake  utf8rewind.cmake
examples/: CMakeLists.txt  bench.cpp  simple.cpp  win.cpp
source/: CMakeLists.txt  ExtraConfig.cmake
source/neo/: unicode.hpp
source/neo/unicode/: bytes.hpp  code_unit_buffer.hpp  concepts.hpp  encoders.hpp  text.hpp  unicode.cpp  unicode.hpp  views.hpp
source/neo/unicode/encodings/: all.hpp  encodings.hpp  native.hpp  utf16.cpp  utf16.hpp  utf32.hpp  utf8.hpp  wide.cpp  wide.hpp
tests/: CMakeLists.txt  unicode.cpp  views.cpp
